--- a/05/css/style.css
+++ b/05/css/style.css
@@ -1,7 +1,7 @@
 .allotted div {
     font-size: 10px;
     color: azure;
-    background-color: crimson;
+    background-color: crimson;fg
     text-align: left;
 }
 
